# CSV

./: .gitignore  CMakeLists.txt  CSV_NewGeneration.sln  Phase 1.txt  Phase 2.txt  Phase 3.txt  README.md  pseudo 2.txt  pseudo 3.txt  rapport GYURI MERÖ.docx  ~$pport GYURI MERÖ.docx
CSV_NewGeneration/: CSV.cpp  CSV_NewGeneration.vcxproj  CSV_NewGeneration.vcxproj.filters  CSV_dyn.cpp  Evaluation.cpp  Evaluation_freq.cpp  Evaluation_xyz.cpp  Extraction.cpp  Global.cpp  Global.h  Global.hpp  InputStream.cpp  InputStream.h  OutputStream.cpp  OutputStream.h  Pattern.cpp  Pattern_xyz.cpp  Set.cpp  Set_dyn.cpp  Set_xyz.cpp  Test.cpp  UnitTest.cpp  Verification.cpp  axes.py  evaluationTest.cpp  evalution_000000000001_isextremez_600_600.csv  evalution_000000000011_isextremez_1800_1800.csv  evalution_000000011010_isextreme_600_60.csv  evalution_000000110100_noextreme_1800_180.csv  evalution_000000111000_noextreme_600_60.csv  evalution_000111111111_isextremez_1800_1800.csv  evalution_011101010000_noextreme_1800_180.csv  evalution_011101100000_isextreme_1800_180.csv  evalution_110101010000_noextreme_1800_180.csv  graph.py  main.cpp  main.ipynb  output.csv  pseudo-code.txt  test.cpp  (+1 more)
CSV_NewGeneration/combination data/bot/000000000011_isextremez_1800_1800/: evaluation.csv  pattern.csv  testset.csv  trainset.csv
CSV_NewGeneration/combination data/bot/000000111000_noextreme_600_60/: evaluation.csv  pattern.csv  testset.csv  trainset.csv
CSV_NewGeneration/combination data/bot/000111111111_isextremez_1800_1800/: evaluation.csv  pattern.csv  testset.csv  trainset.csv
(+20 files in other folders)
